package dev

import (
	"context"
	"fmt"
	"strconv"
	"time"

	"github.com/gin-gonic/gin"
	"github.com/micro/go-micro/v2/client"

	"rxcsoft.cn/pit3/api/internal/common/httpx"
	"rxcsoft.cn/pit3/api/internal/common/loggerx"
	"rxcsoft.cn/pit3/api/internal/system/sessionx"
	"rxcsoft.cn/pit3/lib/msg"
	"rxcsoft.cn/pit3/srv/global/proto/language"
	"rxcsoft.cn/pit3/srv/manage/proto/app"
	"rxcsoft.cn/pit3/srv/manage/proto/customer"
	storagecli "rxcsoft.cn/utils/storage/client"
)

// Customer È°æÂÆ¢
type Customer struct{}

// logÂá∫Âäõ
const (
	CustomerProcessName          = "Customer"
	ActionFindCustomers          = "FindCustomers"
	ActionFindCustomer           = "FindCustomer"
	ActionAddCustomer            = "AddCustomer"
	ActionModifyCustomer         = "ModifyCustomer"
	ActionModifyCustomerAdmin    = "ModifyCustomerAdmin"
	ActionDeleteCustomer         = "DeleteCustomer"
	ActionDeleteSelectCustomers  = "DeleteSelectCustomers"
	ActionHardDeleteCustomers    = "HardDeleteCustomers"
	ActionRecoverSelectCustomers = "RecoverSelectCustomers"
)

// FindCustomers Êü•ÊâæÂ§ö‰∏™È°æÂÆ¢ËÆ∞ÂΩï
// @Router /customers [get]
func (u *Customer) FindCustomers(c *gin.Context) {
	loggerx.InfoLog(c, ActionFindCustomers, loggerx.MsgProcessStarted)

	customerService := customer.NewCustomerService("manage", client.DefaultClient)

	var req customer.FindCustomersRequest
	req.CustomerName = c.Query("customer_name")
	req.InvalidatedIn = c.Query("invalidated_in")
	response, err := customerService.FindCustomers(context.TODO(), &req)
	if err != nil {
		httpx.GinHTTPError(c, ActionFindCustomers, err)
		return
	}

	var result []map[string]interface{}
	for _, item := range response.GetCustomers() {
		var apps []string
		appService := app.NewAppService("manage", client.DefaultClient)

		loggerx.InfoLog(c, ActionFindCustomers, fmt.Sprintf("Process FindApps:%s", loggerx.MsgProcessStarted))
		var appReq app.FindAppsRequest
		appReq.Domain = item.GetDomain()
		appReq.Database = item.GetCustomerId()
		appRes, err := appService.FindApps(context.TODO(), &appReq)
		if err != nil {
			httpx.GinHTTPError(c, ActionFindCustomers, err)
			return
		}
		loggerx.InfoLog(c, ActionFindCustomers, fmt.Sprintf("Process FindApps:%s", loggerx.MsgProcessEnded))

		for _, v := range appRes.GetApps() {
			apps = append(apps, v.GetAppName())
		}

		comp := map[string]interface{}{}

		comp["apps"] = apps
		comp["customer_id"] = item.GetCustomerId()
		comp["customer_name"] = item.GetCustomerName()
		comp["domain"] = item.GetDomain()
		comp["logo"] = item.GetCustomerLogo()
		comp["created_at"] = item.GetCreatedAt()
		comp["created_by"] = item.GetCreatedBy()
		comp["updated_at"] = item.GetUpdatedAt()
		comp["updated_by"] = item.GetUpdatedBy()
		comp["deleted_at"] = item.GetDeletedAt()
		comp["deleted_by"] = item.GetDeletedBy()

		result = append(result, comp)
	}

	loggerx.InfoLog(c, ActionFindCustomers, loggerx.MsgProcessEnded)
	c.JSON(200, httpx.Response{
		Status:  0,
		Message: msg.GetMsg("ja-JP", msg.Info, msg.I003, fmt.Sprintf(httpx.Temp, CustomerProcessName, ActionFindCustomers)),
		Data:    result,
	})
}

// FindCustomer Êü•ÊâæÂçï‰∏™È°æÂÆ¢ËÆ∞ÂΩï
// @Router /customers/{customer_id} [get]
func (u *Customer) FindCustomer(c *gin.Context) {
	loggerx.InfoLog(c, ActionFindCustomer, loggerx.MsgProcessStarted)

	customerService := customer.NewCustomerService("manage", client.DefaultClient)

	section := c.Query("section")

	if section == "domain" {
		var req customer.FindCustomerByDomainRequest
		req.Domain = c.Param("customer_id")
		response, err := customerService.FindCustomerByDomain(context.TODO(), &req)
		if err != nil {
			httpx.GinHTTPError(c, ActionFindCustomer, err)
			return
		}

		loggerx.InfoLog(c, ActionFindCustomer, loggerx.MsgProcessEnded)
		c.JSON(200, httpx.Response{
			Status:  0,
			Message: msg.GetMsg("ja-JP", msg.Info, msg.I003, fmt.Sprintf(httpx.Temp, CustomerProcessName, ActionFindCustomer)),
			Data:    response.GetCustomer(),
		})
		return
	}

	var req customer.FindCustomerRequest
	req.CustomerId = c.Param("customer_id")
	response, err := customerService.FindCustomer(context.TODO(), &req)
	if err != nil {
		httpx.GinHTTPError(c, ActionFindCustomer, err)
		return
	}

	loggerx.InfoLog(c, ActionFindCustomer, loggerx.MsgProcessEnded)
	c.JSON(200, httpx.Response{
		Status:  0,
		Message: msg.GetMsg("ja-JP", msg.Info, msg.I003, fmt.Sprintf(httpx.Temp, CustomerProcessName, ActionFindCustomer)),
		Data:    response.GetCustomer(),
	})
}

// AddCustomer Ê∑ªÂä†Âçï‰∏™È°æÂÆ¢ËÆ∞ÂΩï
// @Router /customers [post]
func (u *Customer) AddCustomer(c *gin.Context) {
	loggerx.InfoLog(c, ActionAddCustomer, loggerx.MsgProcessStarted)

	customerService := customer.NewCustomerService("manage", client.DefaultClient)

	var req customer.AddCustomerRequest
	if err := c.BindJSON(&req); err != nil {
		httpx.GinHTTPError(c, ActionAddCustomer, err)
		return
	}

	req.Writer = sessionx.GetAuthUserID(c)

	response, err := customerService.AddCustomer(context.TODO(), &req)
	if err != nil {
		httpx.GinHTTPError(c, ActionAddCustomer, err)
		return
	}
	loggerx.SuccessLog(c, ActionAddCustomer, fmt.Sprintf(loggerx.MsgProcesSucceed, "AddCustomer"))

	// TODO ËØ≠Ë®ÄÊ∑ªÂä†
	languageService := language.NewLanguageService("global", client.DefaultClient)

	// ‰∏≠Êñá
	var langZhReq language.AddLanguageRequest
	langZhReq.Domain = req.GetDomain()
	langZhReq.LangCd = "zh-CN"
	langZhReq.Text = "ÁÆÄ‰Ωì‰∏≠Êñá"
	langZhReq.Abbr = "üá®üá≥"
	langZhReq.Writer = sessionx.GetAuthUserID(c)
	langZhReq.Database = response.CustomerId

	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process AddLanguage zh:%s", loggerx.MsgProcessStarted))
	_, zher := languageService.AddLanguage(context.TODO(), &langZhReq)
	if zher != nil {
		httpx.GinHTTPError(c, ActionAddCustomer, zher)
		return
	}
	loggerx.SuccessLog(c, ActionAddCustomer, fmt.Sprintf(loggerx.MsgProcesSucceed, "AddLanguage zh"))
	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process AddLanguage zh:%s", loggerx.MsgProcessEnded))
	// Ëã±ËØ≠
	var langEnReq language.AddLanguageRequest
	langEnReq.Domain = req.GetDomain()
	langEnReq.LangCd = "en-US"
	langEnReq.Text = "English"
	langEnReq.Abbr = "üá¨üáß"
	langEnReq.Writer = sessionx.GetAuthUserID(c)
	langEnReq.Database = response.CustomerId

	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process AddLanguage en:%s", loggerx.MsgProcessStarted))
	_, ener := languageService.AddLanguage(context.TODO(), &langEnReq)
	if ener != nil {
		httpx.GinHTTPError(c, ActionAddCustomer, ener)
		return
	}
	loggerx.SuccessLog(c, ActionAddCustomer, fmt.Sprintf(loggerx.MsgProcesSucceed, "AddLanguage en"))
	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process AddLanguage en:%s", loggerx.MsgProcessEnded))

	// Ëã±ËØ≠
	var langThReq language.AddLanguageRequest
	langThReq.Domain = req.GetDomain()
	langThReq.LangCd = "th-TH"
	langThReq.Text = "‡πÑ‡∏ó‡∏¢"
	langThReq.Abbr = "üáπüá≠"
	langThReq.Writer = sessionx.GetAuthUserID(c)
	langThReq.Database = response.CustomerId

	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process AddLanguage th:%s", loggerx.MsgProcessStarted))
	_, ther := languageService.AddLanguage(context.TODO(), &langThReq)
	if ther != nil {
		httpx.GinHTTPError(c, ActionAddCustomer, ther)
		return
	}
	loggerx.SuccessLog(c, ActionAddCustomer, fmt.Sprintf(loggerx.MsgProcesSucceed, "AddLanguage th"))
	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process AddLanguage th:%s", loggerx.MsgProcessEnded))
	// Êó•ËØ≠
	var langJpReq language.AddLanguageRequest
	langJpReq.Domain = req.GetDomain()
	langJpReq.LangCd = "ja-JP"
	langJpReq.Text = "Êó•Êú¨Ë™û"
	langJpReq.Abbr = "üáØüáµ"
	langJpReq.Writer = sessionx.GetAuthUserID(c)
	langJpReq.Database = response.CustomerId

	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process AddLanguage ja:%s", loggerx.MsgProcessStarted))
	_, jper := languageService.AddLanguage(context.TODO(), &langJpReq)
	if jper != nil {
		httpx.GinHTTPError(c, ActionAddCustomer, jper)
		return
	}
	loggerx.SuccessLog(c, ActionAddCustomer, fmt.Sprintf(loggerx.MsgProcesSucceed, "AddLanguage ja"))
	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process AddLanguage ja:%s", loggerx.MsgProcessEnded))
	// ÂàõÂª∫È°æÂÆ¢Êñá‰ª∂Ê°∂
	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process CreateFileBucket :%s", loggerx.MsgProcessStarted))
	_, err = storagecli.NewClient(req.GetDomain())
	if err != nil {
		httpx.GinHTTPError(c, ActionAddCustomer, err)
		return
	}
	loggerx.SuccessLog(c, ActionAddCustomer, fmt.Sprintf(loggerx.MsgProcesSucceed, "CreateFileBucket"))
	loggerx.InfoLog(c, ActionAddCustomer, fmt.Sprintf("Process CreateFileBucket :%s", loggerx.MsgProcessEnded))

	loggerx.InfoLog(c, ActionAddCustomer, loggerx.MsgProcessEnded)
	c.JSON(200, httpx.Response{
		Status:  0,
		Message: msg.GetMsg("ja-JP", msg.Info, msg.I004, fmt.Sprintf(httpx.Temp, CustomerProcessName, ActionAddCustomer)),
		Data:    response,
	})
}

// ModifyCustomer ‰øÆÊîπÂçï‰∏™È°æÂÆ¢ËÆ∞ÂΩï
// @Router /customers/{customer_id} [put]
func (u *Customer) ModifyCustomer(c *gin.Context) {
	loggerx.InfoLog(c, ActionModifyCustomer, loggerx.MsgProcessStarted)

	customerService := customer.NewCustomerService("manage", client.DefaultClient)

	// ÂèòÊõ¥ÂâçÊü•ËØ¢È°æÂÆ¢‰ø°ÊÅØ
	var freq customer.FindCustomerRequest
	freq.CustomerId = c.Param("customer_id")
	fresponse, err := customerService.FindCustomer(context.TODO(), &freq)
	if err != nil {
		httpx.GinHTTPError(c, ActionModifyCustomer, err)
		return
	}
	customerInfo := fresponse.GetCustomer()

	var req customer.ModifyCustomerRequest
	if err := c.BindJSON(&req); err != nil {
		httpx.GinHTTPError(c, ActionModifyCustomer, err)
		return
	}

	req.CustomerId = c.Param("customer_id")
	req.Writer = sessionx.GetAuthUserID(c)

	response, err := customerService.ModifyCustomer(context.TODO(), &req)
	if err != nil {
		httpx.GinHTTPError(c, ActionModifyCustomer, err)
		return
	}
	loggerx.SuccessLog(c, ActionModifyCustomer, fmt.Sprintf(loggerx.MsgProcesSucceed, "ModifyCustomer"))

	// ÂèòÊõ¥ÊàêÂäüÂêéÔºåÊØîËæÉÂèòÊõ¥ÁöÑÁªìÊûúÔºåËÆ∞ÂΩïÊó•Âøó
	// ÊØîËæÉÈ°æÂÆ¢ÂêçÁß∞
	name := customerInfo.GetCustomerName()
	if name != req.GetCustomerName() {
		params := make(map[string]string)
		params["user_name"] = sessionx.GetUserName(c)
		params["company_name"] = req.GetCustomerName()

		loggerx.ProcessLog(c, ActionModifyCustomer, msg.L009, params)
	}

	// ÊØîËæÉ‰∫åÊ¨°È™åËØÅÊòØÂê¶ÂèòÊõ¥
	secondCheck := customerInfo.GetSecondCheck()
	if strconv.FormatBool(secondCheck) != req.GetSecondCheck() {
		params := make(map[string]string)
		params["user_name"] = sessionx.GetUserName(c)
		if secondCheck {
			// ÂÖ≥Èó≠‰∫ÜÁôªÂΩï‰∫åÊ¨°È™åËØÅÁöÑÊó•Âøó
			loggerx.ProcessLog(c, ActionModifyCustomer, msg.L011, params)
		} else {
			// ÊâìÂºÄ‰∫ÜÁôªÂΩï‰∫åÊ¨°È™åËØÅÁöÑÊó•Âøó
			loggerx.ProcessLog(c, ActionModifyCustomer, msg.L010, params)
		}
	}

	loggerx.InfoLog(c, ActionModifyCustomer, loggerx.MsgProcessEnded)
	c.JSON(200, httpx.Response{
		Status:  0,
		Message: msg.GetMsg("ja-JP", msg.Info, msg.I005, fmt.Sprintf(httpx.Temp, CustomerProcessName, ActionModifyCustomer)),
		Data:    response,
	})
}

// DeleteSelectCustomers Âà†Èô§ÈÄâ‰∏≠È°æÂÆ¢ËÆ∞ÂΩï
// @Router /customers [delete]
func (u *Customer) DeleteSelectCustomers(c *gin.Context) {
	loggerx.InfoLog(c, ActionDeleteSelectCustomers, loggerx.MsgProcessStarted)

	var req customer.DeleteSelectCustomersRequest
	req.CustomerIdList = c.QueryArray("customer_id_list")
	req.Writer = sessionx.GetAuthUserID(c)

	customerService := customer.NewCustomerService("manage", client.DefaultClient)
	response, err := customerService.DeleteSelectCustomers(context.TODO(), &req)
	if err != nil {
		httpx.GinHTTPError(c, ActionDeleteSelectCustomers, err)
		return
	}
	loggerx.SuccessLog(c, ActionDeleteSelectCustomers, fmt.Sprintf(loggerx.MsgProcesSucceed, ActionDeleteSelectCustomers))

	loggerx.InfoLog(c, ActionDeleteSelectCustomers, loggerx.MsgProcessEnded)
	c.JSON(200, httpx.Response{
		Status:  0,
		Message: msg.GetMsg("ja-JP", msg.Info, msg.I006, fmt.Sprintf(httpx.Temp, CustomerProcessName, ActionDeleteSelectCustomers)),
		Data:    response,
	})
}

// HardDeleteCustomers Áâ©ÁêÜÂà†Èô§ÂÆ¢Êà∑
// @Router /phydel/customers [delete]
func (u *Customer) HardDeleteCustomers(c *gin.Context) {
	loggerx.InfoLog(c, ActionHardDeleteCustomers, loggerx.MsgProcessStarted)
	customerService := customer.NewCustomerService("manage", client.DefaultClient)

	var req customer.HardDeleteCustomersRequest
	req.CustomerIdList = c.QueryArray("customer_id_list")
	var domains []string
	for _, cid := range req.GetCustomerIdList() {
		var opss client.CallOption = func(o *client.CallOptions) {
			o.RequestTimeout = time.Minute * 10
			o.DialTimeout = time.Minute * 10
		}
		var req customer.FindCustomerRequest
		req.CustomerId = cid
		response, err := customerService.FindCustomer(context.TODO(), &req, opss)
		if err != nil {
			httpx.GinHTTPError(c, ActionHardDeleteCustomers, err)
			return
		}
		domains = append(domains, response.GetCustomer().GetDomain())
	}

	response, err := customerService.HardDeleteCustomers(context.TODO(), &req)
	if err != nil {
		httpx.GinHTTPError(c, ActionHardDeleteCustomers, err)
		return
	}
	loggerx.SuccessLog(c, ActionHardDeleteCustomers, fmt.Sprintf(loggerx.MsgProcesSucceed, ActionHardDeleteCustomers))

	// Âà†Èô§È°æÂÆ¢ÂØπÂ∫îÁöÑÊñá‰ª∂
	for _, domain := range domains {
		minioClient, err := storagecli.NewClient(domain)
		if err != nil {
			httpx.GinHTTPError(c, ActionHardDeleteCustomers, err)
			return
		}

		err = minioClient.DeleteBucket()
		if err != nil {
			httpx.GinHTTPError(c, ActionHardDeleteCustomers, err)
			return
		}
	}

	loggerx.InfoLog(c, ActionHardDeleteCustomers, loggerx.MsgProcessEnded)
	c.JSON(200, httpx.Response{
		Status:  0,
		Message: msg.GetMsg("ja-JP", msg.Info, msg.I006, fmt.Sprintf(httpx.Temp, CustomerProcessName, ActionHardDeleteCustomers)),
		Data:    response,
	})
}

// RecoverSelectCustomers ÊÅ¢Â§çÈÄâ‰∏≠È°æÂÆ¢ËÆ∞ÂΩï
// @Router /recover/customers [PUT]
func (u *Customer) RecoverSelectCustomers(c *gin.Context) {
	loggerx.InfoLog(c, ActionRecoverSelectCustomers, loggerx.MsgProcessStarted)

	var req customer.RecoverSelectCustomersRequest

	// ‰ªébody‰∏≠Ëé∑ÂèñÂèÇÊï∞
	if err := c.BindJSON(&req); err != nil {
		httpx.GinHTTPError(c, ActionRecoverSelectCustomers, err)
		return
	}
	// ‰ªéÂÖ±ÈÄö‰∏≠Ëé∑ÂèñÂèÇÊï∞
	req.Writer = sessionx.GetAuthUserID(c)

	customerService := customer.NewCustomerService("manage", client.DefaultClient)
	response, err := customerService.RecoverSelectCustomers(context.TODO(), &req)
	if err != nil {
		httpx.GinHTTPError(c, ActionRecoverSelectCustomers, err)
		return
	}
	loggerx.SuccessLog(c, ActionRecoverSelectCustomers, fmt.Sprintf(loggerx.MsgProcesSucceed, ActionRecoverSelectCustomers))

	loggerx.InfoLog(c, ActionRecoverSelectCustomers, loggerx.MsgProcessEnded)
	c.JSON(200, httpx.Response{
		Status:  0,
		Message: msg.GetMsg("ja-JP", msg.Info, msg.I013, fmt.Sprintf(httpx.Temp, CustomerProcessName, ActionRecoverSelectCustomers)),
		Data:    response,
	})
}
